--- a/Java/pom.xml
+++ b/Java/pom.xml
@@ -19,13 +19,6 @@
     <build>
         <finalName>AnalogChess</finalName>
 
-        <!-- <resources>-->
-        <!--     <resource>-->
-        <!--         <directory>src/main/resources</directory>-->
-        <!--         <filtering>true</filtering>-->
-        <!--     </resource>-->
-        <!-- </resources>-->
-
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -39,15 +32,6 @@
                         <goals>
                             <goal>shade</goal>
                         </goals>
-
-                        <!-- <configuration>-->
-                        <!--    <relocations>-->
-                        <!--         <relocation>-->
-                        <!--             <pattern>betterchairs.nms</pattern>-->
-                        <!--             <shadedPattern>de.sprax2013.betterchairs.nms</shadedPattern>-->
-                        <!--         </relocation>-->
-                        <!--     </relocations>-->
-                        <!-- </configuration>-->
                     </execution>
                 </executions>
 
@@ -58,7 +42,7 @@
                     <transformers>
                         <transformer
                                 implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                            <mainClass>${project.parent.groupId}.${project.parent.artifactId}.Main</mainClass>
+                            <mainClass>${project.groupId}.${project.artifactId}.Main</mainClass>
                         </transformer>
                     </transformers>
 
@@ -70,6 +54,7 @@
                         <!--       <exclude>LICENSE</exclude>-->
                         <!--     </excludes>-->
                         <!-- </filter>-->
+
                         <filter>
                             <artifact>org.jetbrains:annotations</artifact>
                             <excludes>
