--- a/Java/pom.xml
+++ b/Java/pom.xml
@@ -73,6 +73,13 @@
     </build>
 
     <dependencies>
+        <dependency>
+            <groupId>com.fazecast</groupId>
+            <artifactId>jSerialComm</artifactId>
+            <version>2.6.2</version>
+            <scope>compile</scope>
+        </dependency>
+
         <!-- Dev dependencies -->
         <dependency>
             <groupId>org.jetbrains</groupId>
